lab error handling

--- a/lab-python-error-handling.ipynb
+++ b/lab-python-error-handling.ipynb
@@ -9,9 +9,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "bc99b386-7508-47a0-bcdb-d969deaf6c8b",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8053413d",
    "metadata": {},
+   "outputs": [],
    "source": [
     "## Exercise: Error Handling for Managing Customer Orders\n",
     "\n",
@@ -72,6 +74,155 @@
     "\n",
     "4. Test your code by running the program and deliberately entering invalid quantities and product names. Make sure the error handling mechanism works as expected.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "797cffb4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the quantity of t-shirtss available: 5\n",
+      "Enter the quantity of books available: 5\n",
+      "Enter the quantity of mugs available: 5\n",
+      "Enter the quantity of hats available: 5\n",
+      "Enter the quantity of keychains available: 5\n",
+      "how many of them would you like to order2\n",
+      "Enter the name of the product you want to order (or 'done' to finish): hat\n",
+      "You have chosen to order hat.\n",
+      "Enter the name of the product you want to order (or 'done' to finish): book\n",
+      "You have chosen to order book.\n",
+      "Total products ordered: 2\n",
+      "Percentage of unique products ordered: 40.00%\n",
+      "Updated Inventory:\n",
+      "t-shirts: 5\n",
+      "book: 4\n",
+      "mug: 5\n",
+      "hat: 4\n",
+      "keychain: 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "products = {'tshirts' : 5, 'mugs' : 4, 'hats' : 3, 'books' : 2, 'keychain' : 1}\n",
+    "\n",
+    "def initialize_inventory(products):\n",
+    "    inventory = {}\n",
+    "    for product in products:\n",
+    "        stock = int(input(f\"Enter the initial stock for {product}: \"))\n",
+    "        inventory[product] = stock\n",
+    "    return inventory\n",
+    "\n",
+    "\n",
+    "def get_customer_orders():\n",
+    "    products = [\"t-shirts\", \"book\", \"mug\", \"hat\", \"keychain\"]\n",
+    "    customer_orders = set()\n",
+    "    number_of_orders = int(input(\"how many of them would you like to order\"))\n",
+    "    for i in range(number_of_orders):\n",
+    "        product_name = input(\"Enter the name of the product you want to order (or 'done' to finish): \")\n",
+    "        \n",
+    "        if product_name == 'done':\n",
+    "            break\n",
+    "        \n",
+    "        if product_name in products:\n",
+    "            print(f\"You have chosen to order {product_name}.\")\n",
+    "            customer_orders.add(product_name)\n",
+    "        else:\n",
+    "            print(\"Sorry, we don't have that product available.\")\n",
+    "\n",
+    "    return customer_orders\n",
+    "\n",
+    "def initialize_inventory(products):\n",
+    "    inventory = {}\n",
+    "    for product in products:\n",
+    "        valid_input = False\n",
+    "        while not valid_input:\n",
+    "            try:\n",
+    "                quantity = int(input(f\"Enter the quantity of {product}s available: \"))\n",
+    "                if quantity >= 0:\n",
+    "                    inventory[product] = quantity\n",
+    "                    valid_input = True\n",
+    "                else:\n",
+    "                    print(\"Quantity cannot be negative. Please enter a valid quantity.\")\n",
+    "            except ValueError:\n",
+    "                print(\"Invalid input. Please enter a valid quantity.\")\n",
+    "    return inventory\n",
+    "            \n",
+    "        \n",
+    "\n",
+    "        \n",
+    "        \n",
+    "def calculate_order_statistics(customer_orders, products):\n",
+    "    total_ordered = len(customer_orders)\n",
+    "    unique_ordered = len(set(customer_orders))\n",
+    "    percentage_unique = (unique_ordered / len(products)) * 100\n",
+    "    return total_ordered, percentage_unique\n",
+    "\n",
+    "def update_inventory(customer_orders, inventory):\n",
+    "    for product in customer_orders:\n",
+    "   \n",
+    "        if inventory [product] > 1:\n",
+    "            inventory[product] -= 1\n",
+    "        else:\n",
+    "            inventory[product] == 0\n",
+    "            inventory.remove(product)\n",
+    "            \n",
+    "def calculate_total_price(customer_orders, products):\n",
+    "    total_price = sum(products[product] for product in customer_orders)\n",
+    "    return total_price\n",
+    "\n",
+    "    for products in customer_orders:\n",
+    "        valid_input = False\n",
+    "        while not valid_input:\n",
+    "            try:\n",
+    "                customer_orders = int(input(f\"Enter only positive numbers: \"))\n",
+    "                if price >= 0:\n",
+    "                    inventory[product] = price\n",
+    "                    valid_input = True\n",
+    "                else:\n",
+    "                    print(\"Price cannot be negative. Please enter a valid number.\")\n",
+    "            except ValueError:\n",
+    "                print(\"Invalid input. Please enter a valid price.\")\n",
+    "    return inventory\n",
+    "\n",
+    "\n",
+    "\n",
+    "def print_order_statistics(order_statistics):\n",
+    "    total_ordered, percentage_unique = order_statistics\n",
+    "    print(f\"Total products ordered: {total_ordered}\")\n",
+    "    print(f\"Percentage of unique products ordered: {percentage_unique:.2f}%\")\n",
+    "\n",
+    "def print_updated_inventory(inventory):\n",
+    "    print(\"Updated Inventory:\")\n",
+    "    for product, stock in inventory.items():\n",
+    "        print(f\"{product}: {stock}\")\n",
+    "\n",
+    "def main():\n",
+    "    products = [\"t-shirts\", \"book\", \"mug\", \"hat\", \"keychain\"]\n",
+    "    inventory = initialize_inventory(products)\n",
+    "    \n",
+    "    customer_orders = get_customer_orders()\n",
+    "    update_inventory(customer_orders, inventory)\n",
+    "    \n",
+    "    order_statistics = calculate_order_statistics(customer_orders, products)\n",
+    "    print_order_statistics(order_statistics)\n",
+    "    \n",
+    "    print_updated_inventory(inventory)\n",
+    "    \n",
+    "\n",
+    "main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c93f7f7e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -90,7 +241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
